<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgot_password_lt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/welcome_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password_tint"/>

    <TextView
        android:id="@+id/sign_in_tint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_note"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/reset_password_tint" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ph_num_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/sign_in_tint"
        app:errorEnabled="true"
        android:layout_marginTop="15dp"
        app:hintEnabled="true"
        app:startIconTint="@color/grey"
        app:startIconDrawable="@drawable/telephone_icon"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Your Phone Number"
            android:textSize="14dp"
            android:textStyle="bold"
            android:maxLength="10"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/grey"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/blue_btn"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="8dp"
        android:textSize="15sp"
        android:paddingBottom="8dp"
        android:text="@string/reset_password_txt"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/have_acc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password_btn"
        android:layout_marginTop="15dp"
        android:paddingLeft="110dp"
        android:fontFamily="@font/poppins_regular"
        android:text="have an account?"/>

    <TextView
        android:id="@+id/return_to_login_btn_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password_btn"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/have_acc_txt"
        android:text="Sign In"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/btn_clr"/>


</RelativeLayout>