<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_page_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
         android:src="@drawable/buyaway_logo_blue"
        />


    <TextView
        android:id="@+id/sign_in_tint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="85dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/sign_in_intimate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/sign_in_tint"
        app:startIconDrawable="@drawable/telephone_icon"
        app:startIconTint="@color/grey"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priary_number_txt"
            android:textSize="15dp"
             android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/grey"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/user_name_lt"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/error"
        app:startIconDrawable="@drawable/padlock_icon"
        app:startIconTint="@color/grey"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textSize="15dp"
             android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/grey"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_lt"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/blue_btn"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingTop="8dp"
        android:textSize="15sp"
        android:paddingBottom="8dp"
        android:text="LOGIN"
        android:textColor="@color/white" />

    <TextView
         android:id="@+id/or_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/sign_in_btn"
         android:layout_marginTop="20dp"
         android:text="OR"
         android:textStyle="bold"
        android:visibility="gone"
        android:fontFamily="@font/poppins_semibold"
         />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_toLeftOf="@id/or_btn"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/sign_in_btn"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:background="@color/grey"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_toRightOf="@id/or_btn"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/sign_in_btn"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/skip_now_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="40dp"
        android:text="@string/skip_for_now_txt"
        android:gravity="center"
        android:textStyle="bold"
        android:alpha="0.8"
        android:visibility="gone"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/text_input_with_border_bg"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_below="@+id/or_btn"/>

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skip_now_btn"
        android:layout_marginTop="35dp"
        android:layout_toLeftOf="@+id/v_center"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginRight="5dp"
        android:textColor="@color/btn_clr"
         android:text="Sign Up Here "/>

    <View
        android:id="@+id/v_center"
        android:layout_width="0.5dp"
        android:layout_height="20dp"
         android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
         android:layout_below="@+id/sign_in_btn"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/forgot_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skip_now_btn"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/v_center"
        android:fontFamily="@font/poppins_regular"
        android:text="Forgot Password"
        android:textColor="@color/btn_clr"
   />

    <TextView
        android:id="@+id/didt_have_acc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_btn"
        android:layout_marginTop="0dp"
        android:paddingLeft="80dp"
        android:visibility="gone"
        android:fontFamily="@font/poppins_regular"
        android:text="Don't have an account?"/>
    <TextView
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password_btn"
        android:layout_marginTop="15dp"
        android:visibility="gone"
         android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="60dp"
        android:text="Register"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/didt_have_acc_txt"
         android:textStyle="bold"
        android:textColor="@color/btn_clr"/>

</RelativeLayout>